[package]
name = "cacache"
version = "10.0.2-alpha.0"
authors = ["Kat Marchán <kzm@zkat.tech>"]
edition = "2021"
description = "Content-addressable, key-value, high-performance, on-disk cache."
license = "Apache-2.0"
repository = "https://github.com/zkat/cacache-rs"
homepage = "https://github.com/zkat/cacache-rs"
readme = "README.md"
categories = ["caching", "filesystem"]

[dependencies]
async-std = { version = "1.10.0", features = ["unstable"], optional = true }
digest = "0.10.6"
either = "1.6.1"
futures = "0.3.17"
hex = "0.4.3"
serde_json = "1.0.68"
serde = "1.0.130"
serde_derive = "1.0.130"
walkdir = "2.3.2"
either = "1.6.1"
sha2 = "0.10.6"
ssri = "7.0.0"
tempfile = "3.2.0"
thiserror = "1.0.29"
tokio = { version = "1.12.0", features = [
    "fs",
    "io-util",
    "macros",
    "rt",
    "rt-multi-thread",
], optional = true }
tokio-stream = { version = "0.1.7", features = ["io-util"], optional = true }
walkdir = "2.3.2"

[features]
 default = ["async-std"]
 tokio-runtime = ["tokio", "tokio-stream"]

[dev-dependencies]
async-std = { version = "1.10.0", features = ["unstable"] }
async-attributes = "1.1.2"
criterion = "0.3.5"

[[bench]]
name = "benchmarks"
harness = false

[features]
default = ["async-std"]
tokio-runtime = ["tokio", "tokio-stream"]
